manifests/kustomize/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: e-commence-fe
  labels:
    app: e-commence-fe
spec:
  replicas: 1
  selector:
    matchLabels:
      app: e-commence-fe
  template:
    metadata:
      name: e-commence-fe
      labels:
        app: e-commence-fe
    spec:
      containers:
        - name: e-commence-fe
          image: example
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
            - name: http3
              containerPort: 443
              protocol: TCP
            - name: quic
              containerPort: 8443
              protocol: UDP
      restartPolicy: Always
