manifests/kustomize/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: e-commence-fe-service
spec:
  selector:
    app: e-commence-fe
  ports:
    - name: http
      port: 80
      targetPort: 3000
      protocol: TCP
      nodePort: 30015
    - name: https
      port: 443
      targetPort: 443
      protocol: TCP
      nodePort: 30016
    - name: quic
      port: 8443
      targetPort: 8443
      protocol: UDP
      nodePort: 30017
  type: NodePort
